--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Quote Generator</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
