--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <title>Quote Generator</title>
     <style>
-      * {
+     *, #root, html, body {
         padding: 0;
         margin: 0;
         box-sizing: border-box;
