--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,17 @@
 
     <title>Quote Generator</title>
     <style>
-     *{
+      * {
         padding: 0;
         margin: 0;
         box-sizing: border-box;
+        font-family: "Montserrat", Courier, monospace;
       }
     </style>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=Montserrat:wght@500&family=Roboto&family=Urbanist:wght@100;200;400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
